rmove height styling for cover image so that its no longer stretched. width is set via the thumbnail API

--- a/css/sass/_header.scss
+++ b/css/sass/_header.scss
@@ -405,7 +405,7 @@ div.action-bar {
 			left: $grid-gutter-width / 2;
 			display: block;
 			width: 100%;
-			height: $home-slide-height;
+			//height: $home-slide-height;
 		}	
 	}
 }
